--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,11 +9,11 @@ demo.security.jwt:
   tokenSigningKey: xm8EV6Hy5RMFK4EEACIDAwQus
 
 spring.datasource:
-  url: "jdbc:h2:mem:testdb"
+  url: "jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE"
   driverClassName: org.h2.Driver
   username: sa
   password: ""
-  data: "classpath*:data.sql"
+  data: "classpath*:initial-data.sql"
 spring.jpa:
   database-platform: org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled: true
